2014-11-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-render): Don't set the title to the URL.

2014-11-13  Ulrich Müller  <ulm@gentoo.org>

	* version.el (emacs-repository-get-version): Call `git log'
	command with proper format argument (bug#19049).

2014-11-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* bindings.el (search-map): Bind M-s M-s to `eww-search-words'.

2014-11-14  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

	* net/eww.el (eww-search-words): New command (bug#16258).

2014-11-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-inhibit-images): Add a doc string.

	* net/eww.el (eww-after-render-hook): New variable.
	(eww-render): Use it.

	* net/shr.el (shr-descend): Don't descend further than
	`max-specpdl-size' allows (bug#16587).
	(shr-depth): New variable.
	(shr-warning): New variable.

2014-11-13  Ivan Shmakov  <ivan@siamics.net>

	* net/shr.el (shr-parse-base): Handle <base href=""> correctly.
	(shr-expand-url): Expand absolute URLs correctly (bug#17958).

2014-11-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww): Add comment to clarify.

	* net/shr.el (shr-parse-image-data): Remove blocked bits from
	external SVG images.
	(shr-tag-object): Display images in <object> forms (bug#16244).
	(shr-tag-table): Also insert <objects> after the tables.

2014-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-hg.el (vc-hg-state): Disable pager.  (Bug#18940)

2014-11-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-form-file): Fix version number.

2014-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-form-file): :type isn't a valid `defface' keyword.

2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

        * net/eww.el(eww-form-file(defface)): New defface of file upload form.
        (eww-submit-file): New key map of file upload.
        (eww-form-file): New file upload button and file name context.