@@ -1,3 +1,8 @@
+2014-11-14  Fabián Ezequiel Gallina  <fgallina@gnu.org>
+
+	* progmodes/python.el (python-shell-completion-get-completions):
+	Fix previous merge.
+
 2014-11-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* net/eww.el (eww-render): Don't set the title to the URL.
